[package]
name = "wasm-bindgen-test"
version = "0.2.13"
authors = ["The wasm-bindgen Developers"]

[dependencies]
console_error_panic_hook = '0.1'
futures = '0.1'
js-sys = { path = '../js-sys', version = '0.2.13' }
wasm-bindgen = { path = '../..', version = '0.2.13' }
wasm-bindgen-futures = { path = '../futures', version = '0.2.13' }
wasm-bindgen-test-macro = { path = '../test-macro', version = '=0.2.13' }

[lib]
test = false
